[package]
name = "exit-future"
edition = "2018"
version = "0.1.4"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Future that signals exit to many receivers"
repository = "https://github.com/paritytech/exit-future"
license = "MIT"

[dependencies]
futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
parking_lot = "0.7.1"
pin-utils = "0.1.0-alpha.4"